<resources>
    <string name="app_name">TencentEffect</string>
    <string name="not_support">当前设备不支持</string>
    <string name="not_support_beauty">当前设备不支持美颜</string>
    <string name="not_auth">权限不足</string>
    <string name="check_noauth_tip">没有权限或资源缺失，若有疑问请请联系接口人咨询</string>
    <string name="revert_tip_title">确定重置吗</string>
    <string name="revert_tip_msg">重置会将目前所有特效恢复至默认效果，不可撤回</string>
    <string name="revert_tip_dialog_left_btn">取消</string>
    <string name="revert_tip_dialog_right_btn">确定</string>
    <string name="revert_btn_txt">重置</string>
    <string name="pannel_close_btn_txt">收起</string>
    <string name="pannel_expand_btn_txt">展开</string>
    <string name="pannel_beauty_switch_open_txt">打开美颜</string>
    <string name="pannel_beauty_switch_close_txt">关闭美颜</string>
    <string name="downloading_tip">下载中:</string>
    <string name="download_failed_tip">下载失败</string>
    <string name="download_success_tip">下载成功</string>
    <string name="motion_download_result_tip">动效下载结果</string>
    <string name="confirm_tip">确定</string>
    <string name="motion_downloading_tip">动效下载中，成功%s/%s ，失败%s个</string>
    <string name="motion_download_complete_tip">动效下载完成，成功%s个，失败%s个</string>
    <string name="success_tip">成功</string>
    <string name="failed_tip">失败：</string>
    <string name="downloading_motion_tip">正在下载动效：</string>
    <string name="auth_success_tip">授权成功</string>
    <string name="auth_failed_tip">授权失败</string>
    <string name="please_download_tip">%s没有下载好，请先下载</string>
    <string name="copying_tip">资源拷贝中...</string>
    <string name="unable_to_download_tip">空间不足，无法下载%s</string>
    <string name="download_dialog_title">提示</string>
    <string name="download_dialog_content">1，把assets、libs、动效资源的zip包上传到云端，生成下载URL\n2,更新demo工程的ResDownloadConfig.java里的URL和MD5 \n3,如果切换了加载方式，请卸载重装demo \n4,更详细的指引，请参考SDK/文档/doc.html/Android接入指引</string>
    <string name="download_dialog_negative_btn">取消</string>
    <string name="download_dialog_positive_btn">我已完成上述操作</string>
    <string name="no_beauty_test">无美颜相机</string>
    <string name="beauty_img_txt">图片精修</string>
    <string name="beauty_preview_txt">实时拍摄</string>
    <string name="select_pixel_label">选择像素</string>
    <string name="select_resource_label">资源位置</string>
    <string name="local_resource_label">内置APK</string>
    <string name="internet_resource_label">网络</string>
    <string name="main_ac_title">腾讯特效引擎Demo</string>
    <string name="download_options_label">启用断点续传（请确保你的下载服务器支持）</string>
    <string name="download_options_1">下载libs</string>
    <string name="download_options_2">下载assets</string>
    <string name="download_options_3">下载动效资源</string>
    <string name="use_rear_camera">使用后置摄像头</string>
    <string name="avatar_voice_start">开始说话</string>
    <string name="avatar_voice_stop">停止说话</string>
    <string name="avatar_voice_btn1">语音驱动表情(头部模型)</string>
    <string name="avatar_voice_btn2">语音驱动表情</string>
    <string name="avatar_body_driven">身体驱动</string>
    <string name="avatar_qq_show">阳光男孩</string>
    <string name="strength">强度</string>
    <string name="autohtin_body_strength_label">一键瘦身</string>
    <string name="body_leg_stretch_label">长腿</string>
    <string name="body_slim_leg_strength_label">瘦腿</string>
    <string name="body_waish_strength_label">瘦腰</string>
    <string name="body_thin_shoulder_strength_label">瘦肩</string>
    <string name="body_slim_head_strength_label">小头</string>
    <string name="beauty_whiten_label">美白</string>
    <string name="beauty_smooth_label">磨皮</string>
    <string name="beauty_ruddy_label">红润</string>
    <string name="image_contrast_label">对比度</string>
    <string name="image_saturation_label">饱和度</string>
    <string name="image_sharpen_label">清晰度</string>
    <string name="beauty_enlarge_eye_label">大眼</string>
    <string name="beauty_thin_face_label">瘦脸</string>
    <string name="beauty_thin_face1_label">自然</string>
    <string name="beauty_thin_face2_label">女神</string>
    <string name="beauty_thin_face3_label">英俊</string>
    <string name="beauty_v_face_label">V脸</string>
    <string name="beauty_narrow_face_label">窄脸</string>
    <string name="beauty_short_face_label">短脸</string>
    <string name="beauty_basic_face_label">脸型</string>
    <string name="beauty_lips_label">口红</string>
    <string name="beauty_lips1_label">复古红</string>
    <string name="beauty_lips2_label">蜜桃色</string>
    <string name="beauty_lips3_label">珊瑚橘</string>
    <string name="beauty_lips4_label">温柔粉</string>
    <string name="beauty_lips5_label">活力橙</string>
    <string name="beauty_redcheeks_label">腮红</string>
    <string name="beauty_redcheeks1_label">简约</string>
    <string name="beauty_redcheeks2_label">盛夏</string>
    <string name="beauty_redcheeks3_label">害羞</string>
    <string name="beauty_redcheeks4_label">成熟</string>
    <string name="beauty_redcheeks5_label">雀斑</string>
    <string name="beauty_liti_label">立体</string>
    <string name="beauty_liti1_label">自然</string>
    <string name="beauty_liti2_label">俊朗</string>
    <string name="beauty_liti3_label">光芒</string>
    <string name="beauty_liti4_label">清新</string>
    <string name="beauty_thin_cheek_label">瘦颧骨</string>
    <string name="beauty_chin_label">下巴</string>
    <string name="beauty_forehead_label">额头</string>
    <string name="beauty_eye_lighten_label">亮眼</string>
    <string name="beauty_eye_distance_label">眼距</string>
    <string name="beauty_eye_angle_label">眼角</string>
    <string name="beauty_thin_nose_label">瘦鼻</string>
    <string name="beauty_nose_wing_label">鼻翼</string>
    <string name="beauty_nose_position_label">鼻子位置</string>
    <string name="beauty_tooth_beauty_label">白牙</string>
    <string name="beauty_remove_pounch_label">祛皱</string>
    <string name="beauty_wrinkle_smooth_label">祛法令纹</string>
    <string name="beauty_remove_eye_pouch_label">祛眼袋</string>
    <string name="beauty_mouth_size_label">嘴型</string>
    <string name="beauty_mouth_height_label">嘴唇厚度</string>
    <string name="item_none_label">无</string>
    <string name="motion_2d_label">2D动效</string>
    <string name="motion_3d_label">3D动效</string>
    <string name="motion_hand_label">手势动效</string>
    <string name="motion_gan_label">趣味</string>
    <string name="segmentation_custom_label">自定义背景</string>
    <string name="lut_resource_name_str">aiqing_lf.png:爱情, baicha_lf.png:白茶, baicha2_lf.png:白茶-2, bainen_lf.png:白嫩, baixi_lf.png:白皙, baixi2_lf.png:白皙-2, candyb_lf.png:糖果, chengjing_lf.png:澄净, chonglang_lf.png:冲浪, chunyi_lf.png:春意, chuwen_lf.png:初吻, chuxia_lf.png:初夏, dannai_lf.png:淡奶, dianying_lf.png:电影, dongjing_lf.png:东京, dongri_lf.png:冬日, dushi_lf.png:都市, fafei_lf.png:咖啡, fennen_lf.png:粉嫩, fugu_lf.png:复古, fuyun_lf.png:浮云, gaobai_lf.png:告白, haishui_lf.png:海水, heibai_lf.png:黑白, hudie_lf.png:蝴蝶, huidiao_lf.png:灰调, huiwei_lf.png:回味, huoli_lf.png:活力, huoli2_lf.png:活力-2, jiannuan_lf.png:渐暖, jiaopian_lf.png:胶片, jiaoye_lf.png:蕉叶, jidong_lf.png:悸动, jiepai_lf.png:街拍, jiudiao_lf.png:旧调, jiudiao2_lf.png:旧调-2, lengcui_lf.png:冷萃, liren_lf.png:丽人, liucai_lf.png:流彩, luoma_lf.png:罗马, luoma2_lf.png:罗马-2, luoye_lf.png:落叶, meihuo_lf.png:魅惑, meiwei_lf.png:美味, menglong_lf.png:朦胧, mianhuatang_lf.png:棉花糖, moren_lf.png:清新, musi_lf.png:慕斯, naika_lf.png:奶咖, nailao_lf.png:奶酪, nenya_lf.png:嫩芽, ningmeng_lf.png:柠檬, nuanxin_lf.png:暖心, nuanyang_lf.png:暖阳, qiangwei_lf.png:蔷薇, qingche_lf.png:清澈, qingcheng_lf.png:倾城, qingchun_lf.png:青春, qingfeng_lf.png:清风, qingjiaopian_lf.png:轻胶片, qingse_lf.png:青涩, qingtou_lf.png:清透, qingyi_lf.png:青衣, qingyi_lf.png:清逸, qingyi2_lf.png:清逸-2, qipao_lf.png:气泡, reqing_lf.png:热情, riguang_lf.png:日光, riluo_lf.png:日落, rixi_lf.png:日系, senlin_lf.png:森林, shatan_lf.png:沙滩, shengdai_lf.png:圣代, shengji_lf.png:生机, shenmi_lf.png:神秘, shishang_lf.png:时尚, shuiguang_lf.png:水光, shuiguo_lf.png:水果, tianbohe_lf.png:甜薄荷, tianmei_lf.png:甜美, tianxin_lf.png:甜心, weifeng_lf.png:微风, wenrou_lf.png:温柔, wuhou_lf.png:午后, xiangfen_lf.png:香氛, xiangpian_lf.png:相片, xiaoxi_lf.png:小溪, xiari_lf.png:夏日, xindong_lf.png:心动, xingguang_lf.png:星光, xinxian_lf.png:新鲜, xuanlan_lf.png:绚烂, xueding_lf.png:雪顶, yahui_lf.png:雅灰, yangguang_lf.png:阳光, yingtaobuding_lf.png:樱桃布丁, yishigan_lf.png:仪式感, youge_lf.png:优格, yuedong_lf.png:悦动, zaocan_lf.png:早餐, zhuguang_lf.png:烛光, ziran_lf.png:自然, ziran2_lf.png:自然-2</string>
    <string name="motion_resource_str">video_guifeiface:贵妃脸, video_kaixueqianhou:上学前后, video_mengmengxiong:萌萌熊, video_zuijiuweixun:醉酒微醺, video_fugu_dv:复古DV, video_nightgown:毛毡发箍, video_bingjingaixin:冰晶爱心, video_rixishaonv:日系少女, video_chudao:C位出道, video_fenweiqiehuan:氛围切换, video_shangtoule:上头了, video_heimaomi:可爱喵, video_boys:闪动爱心, video_litihuaduo:立体花朵, video_baozilian:包子脸, video_lianliancaomei:恋恋草莓, video_xuanmeizhuang:元气贴纸, video_kangnaixin:氛围康乃馨, video_keaituya:可爱涂鸦, video_aixinyanhua:爱心烟花, video_xiaohuangmao:童趣鸭鸭帽, video_xiaohongxing:小红星, video_cherries:小樱桃, video_toumingyanjing:透明眼镜, video_aiyimanman:爱意满满, video_xuancainihong:炫彩霓虹, video_liuhaifadai:刘海发带, video_tianxinmengniiu:甜心萌牛, video_kawayixiaoxiong:卡哇伊小熊, video_shuangmahua:双麻花, video_xingganxiaochou:性感小丑, video_naipingmianmo:奶瓶面膜, video_qiqiupaidui:气球派对, video_biaobai:表白, video_yaogunyue:摇摇乐, video_xiangsuyuzhou:像素宇宙, video_qipaoshui:气泡水, video_otwogirl:波点女孩, video_dongriliange:冬日恋歌, video_tutujiang:兔兔酱, video_egaoshuangwanzi:恶搞双丸子, video_boom:动感墨镜, video_xiaohonghua:小红花, video_quebanzhuang:日系雀斑妆, video_lengliebingmo:冷冽冰瞳, video_feitianzhuzhu:飞天猪猪, video_ningmengyayamao:柠檬鸭鸭帽, video_jinli:锦鲤, video_diejia_makalongtoutao:马卡龙头套, video_diejia_w_watermelonmakeup:西瓜妆容, video_zhixingmeigui:知性玫瑰, video_tiankulamei:甜酷辣妹, video_diejia_tuzifajia:兔子发夹, video_diejia_w_dinosaurworld:恐龙世界, video_diejia_dogmask:小狗面具, video_diejia_xiongzhua:熊爪, video_diejia_tonghualian_twopag:童话脸, video_diejia_w_insbutterfly:蝴蝶, video_tantanfagu:弹弹发箍, video_hudiejie:魔法蝴蝶结, video_maoxinvhai:猫系女孩, video_guangban:光斑, video_diejia_butterfly:蝴蝶飞, video_3DFace_springflower:花仙子, video_weiguang:微光, video_liuxingshan:流星闪, video_liudongxg:流动效果, video_yazi:抖抖鸭, video_tonghuagushi:童话故事, video_diejia_orangecat:橘子猫, video_w_takeitaway:带走, video_diejia_dimonds:钻石, video_guoman_hua:国漫画, video_shoushiwu:手指泡泡 ,video_sakuragirl:樱花女孩 ,video_bubblegum:童年泡泡糖,video_guochaoqianxi:国潮千玺, video_guangying:光影, video_diejia_te_mogutou1:蘑菇头, video_diejia_xiaoyangtoutao:小羊头套</string>
    <string name="makeup_resource_str">video_nvtuanzhuang:女团妆, video_makeup_xuemei:学妹妆, video_shaishangzhuang:晒伤妆, video_zhiganzhuang:质感妆, video_makeup_dongganjiche:动感机车妆, video_liangxia:凉夏, video_ruanmei:软妹妆, video_hongjiuzhuang:红酒妆, video_xiaohuazhuang:校花妆, video_makeup_xinjisuyan:心机素颜, video_beikalan:北卡蓝, video_shuimitao:蜜桃妆, video_makeup_wocan:卧蚕妆, video_fenfenxia:桃花妆, video_makeup_gangwei:港味妆, video_xuejiezhuang:学姐妆, video_guajiezhuang:元气妆, video_makeup_naibai:奶白妆, video_xuemeizhuang:学妹妆容, video_makeup_baitao:白桃妆,video_makeup_nanfa:南法, video_makeup_weishan:微闪, video_makeup_qingshuang:清爽, video_makeup_yangguang:阳光, video_makeup_feiluomeng:费洛蒙, video_makeup_naixiong:奶凶, video_makeup_xiantao:仙桃, video_makeup_chengshu:成熟, video_makeup_zhigan:质感, video_makeup_rehongjiu:热红酒, video_makeup_chaonan:潮男</string>
    <string name="segmentation_resource_str">
          video_empty_segmentation:分割,
          video_segmentation_blur_45:背景模糊-弱,
          video_segmentation_blur_75:背景模糊-强,
          video_segmentation_transparent_bg:背景透明,
          video_guaishoutuya:怪兽涂鸦
    </string>
    <string name="xmagic_panel_tab_beauty">美颜</string>
    <string name="xmagic_panel_tab_body_beauty">美体</string>
    <string name="xmagic_panel_tab_lut">滤镜</string>
    <string name="xmagic_panel_tab_motion">动效</string>
    <string name="xmagic_panel_tab_makeup">美妆</string>
    <string name="xmagic_panel_tab_segmentation">分割</string>
    <string name="xmagic_panel_tab_kv">键值对</string>
    <string name="error_0">授权成功</string>
    <string name="error_1">无效授权, 请检查授权文件的文件名/路径是否正确，比如license和licence的拼写方式是否统一</string>
    <string name="avatar_btn_name">Avatar 体验</string>
    <string name="avatar_launch_title">腾讯云音视频</string>
</resources>