<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/avatar_launch_top_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar_launch_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toRightOf="@+id/icon"
            app:layout_constraintTop_toTopOf="@+id/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AVATAR"
            android:textColor="#0052F2"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/icon"
            app:layout_constraintLeft_toRightOf="@+id/icon"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/btn_body_driven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/avatar_body_driven"
            android:textAllCaps="false"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <Button
                android:id="@+id/btn_qq_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/avatar_qq_show"
                android:textAllCaps="false"
                app:layout_constraintRight_toLeftOf="@id/btn_body_driven"
                app:layout_constraintTop_toTopOf="parent"
                />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/custom_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/avatar_launch_custom_img"
            app:layout_constraintDimensionRatio="734:312"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/full_body_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/avatar_launch_full_body_img"
            app:layout_constraintDimensionRatio="734:338"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_btn" />

        <ImageView
            android:id="@+id/capture_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/avatar_launch_capture_img"
            app:layout_constraintDimensionRatio="734:350"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_body_btn" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_audio2exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="@string/avatar_voice_btn1"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_audio2exp_body"
            app:layout_constraintTop_toBottomOf="@id/capture_btn" />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btn_audio2exp_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="@string/avatar_voice_btn2"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/capture_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>